README-3 개발 환경 추가 및 erd 변경